cabal-version:       2.4
name:                rtm
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:             NONE
-- license-file:        LICENSE
author:              Sergey Lozhkin
maintainer:          sergey.lozhkin@brightpattern.com
-- copyright:
category:            Text
-- extra-source-files:  CHANGELOG.md

executable rtm
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:      base ^>=4.14.1.0,
                      lucid,
                      text
  -- hs-source-dirs:
  default-language:    Haskell2010
